<resources>
    <string name="app_name">DemoApp</string>
    <string name="refresh">Refresh</string>
    <string name="settings_general">General</string>

    <string name="text_summary">Select animation speed</string>
    <string name="settings_select_text">Select Text</string>

    <string name="text_animation">Animation</string>
    <string name="animation_key">animation</string>
    <string name="slow_animation">Slow</string>

    <string name="text_grid">Choose grid size</string>
    <string name="text_summary_grid">Choose How many items show up in a row</string>
    <string name="grid_key">grid</string>
    <string name="grid_size_default">3</string>

    <string name="text_spacing">Spacing</string>
    <string name="spacing_summary">Choose space between items</string>
    <string name="spacing_key">spacing</string>

    <string name="spacing_small">Small</string>
    <string name="text_select">Select</string>
</resources>
